--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -11,6 +13,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -20,18 +23,18 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# general 
+# General
 .AppleDouble
 .LSOverride
 .vscode
 
-# icon must end with two \r
+# Icon must end with two \\r
 Icon
 
-# thumbnails
+# Thumbnails
 ._*
 
-# files that might appear in the root of a volume
+# Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
 .Spotlight-V100
@@ -40,7 +43,7 @@ Icon
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
 
-# directories potentially created on remote AFP share
+# Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
 Network Trash Folder
